change project name
and some interface waring

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bpdd",
+  "name": "xuncaoji",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "guoliang146 <1355873614@qq.com>",
